// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changeMonth 1`] = `
Object {
  "Constructor": "DayOfMonth",
  "Options": Object {
    "ID": "component",
    "changeDate": [Function],
    "classForDate": [Function],
    "date": 2015-03-23T07:02:17.000Z,
    "daysOfWeek": Array [
      "Пн",
      "Вт",
      "Ср",
      "Чт",
      "Пт",
      "Сб",
      "Вс",
    ],
    "directives": Object {
      "onclick": [Function],
    },
    "isDateSelectable": [Function],
    "nextSymbol": "▸",
    "prevSymbol": "◂",
    "showTime": true,
    "today": 2020-04-25T08:03:30.000Z,
    "value": 2015-02-23T07:02:17.000Z,
  },
  "html": "
<thead>
  <tr>
    <th><span>◂</span></th>
    <th colspan=\\"5\\" class=\\"picker-switch\\">Март 2015 г.</th>
    <th><span>▸</span></th>
  </tr>
  <tr>
    <th>Пн</th>
    <th>Вт</th>
    <th>Ср</th>
    <th>Чт</th>
    <th>Пт</th>
    <th>Сб</th>
    <th>Вс</th>
  </tr>
</thead>
<tbody>
  <tr>
    <td class=\\"day other-month active\\">23</td>
    <td class=\\"day other-month\\">24</td>
    <td class=\\"day other-month\\">25</td>
    <td class=\\"day other-month\\">26</td>
    <td class=\\"day other-month\\">27</td>
    <td class=\\"day other-month\\">28</td>
    <td class=\\"day\\">1</td>
  </tr>
  <tr>
    <td class=\\"day\\">2</td>
    <td class=\\"day\\">3</td>
    <td class=\\"day\\">4</td>
    <td class=\\"day\\">5</td>
    <td class=\\"day\\">6</td>
    <td class=\\"day\\">7</td>
    <td class=\\"day\\">8</td>
  </tr>
  <tr>
    <td class=\\"day\\">9</td>
    <td class=\\"day\\">10</td>
    <td class=\\"day\\">11</td>
    <td class=\\"day\\">12</td>
    <td class=\\"day\\">13</td>
    <td class=\\"day\\">14</td>
    <td class=\\"day\\">15</td>
  </tr>
  <tr>
    <td class=\\"day\\">16</td>
    <td class=\\"day\\">17</td>
    <td class=\\"day\\">18</td>
    <td class=\\"day\\">19</td>
    <td class=\\"day\\">20</td>
    <td class=\\"day\\">21</td>
    <td class=\\"day\\">22</td>
  </tr>
  <tr>
    <td class=\\"day\\">23</td>
    <td class=\\"day\\">24</td>
    <td class=\\"day\\">25</td>
    <td class=\\"day\\">26</td>
    <td class=\\"day\\">27</td>
    <td class=\\"day\\">28</td>
    <td class=\\"day\\">29</td>
  </tr>
  <tr>
    <td class=\\"day\\">30</td>
    <td class=\\"day\\">31</td>
    <td class=\\"day other-month\\">1</td>
    <td class=\\"day other-month\\">2</td>
    <td class=\\"day other-month\\">3</td>
    <td class=\\"day other-month\\">4</td>
    <td class=\\"day other-month\\">5</td>
  </tr>
</tbody>
<tfoot>
  <tr>
    <th colspan=\\"7\\">13:02:17</th>
  </tr>
</tfoot>
<!--if-->
",
}
`;

exports[`changeMonth 2`] = `
Object {
  "Constructor": "DayOfMonth",
  "Options": Object {
    "ID": "component",
    "changeDate": [Function],
    "classForDate": [Function],
    "date": 2015-02-23T07:02:17.000Z,
    "daysOfWeek": Array [
      "Пн",
      "Вт",
      "Ср",
      "Чт",
      "Пт",
      "Сб",
      "Вс",
    ],
    "directives": Object {
      "onclick": [Function],
    },
    "isDateSelectable": [Function],
    "nextSymbol": "▸",
    "prevSymbol": "◂",
    "showTime": true,
    "today": 2020-04-25T08:03:30.000Z,
    "value": 2015-02-23T07:02:17.000Z,
  },
  "html": "
<thead>
  <tr>
    <th><span>◂</span></th>
    <th colspan=\\"5\\" class=\\"picker-switch\\">Февраль 2015 г.</th>
    <th><span>▸</span></th>
  </tr>
  <tr>
    <th>Пн</th>
    <th>Вт</th>
    <th>Ср</th>
    <th>Чт</th>
    <th>Пт</th>
    <th>Сб</th>
    <th>Вс</th>
  </tr>
</thead>
<tbody>
  <tr>
    <td class=\\"day other-month\\">26</td>
    <td class=\\"day other-month\\">27</td>
    <td class=\\"day other-month\\">28</td>
    <td class=\\"day other-month\\">29</td>
    <td class=\\"day other-month\\">30</td>
    <td class=\\"day other-month\\">31</td>
    <td class=\\"day\\">1</td>
  </tr>
  <tr>
    <td class=\\"day\\">2</td>
    <td class=\\"day\\">3</td>
    <td class=\\"day\\">4</td>
    <td class=\\"day\\">5</td>
    <td class=\\"day\\">6</td>
    <td class=\\"day\\">7</td>
    <td class=\\"day\\">8</td>
  </tr>
  <tr>
    <td class=\\"day\\">9</td>
    <td class=\\"day\\">10</td>
    <td class=\\"day\\">11</td>
    <td class=\\"day\\">12</td>
    <td class=\\"day\\">13</td>
    <td class=\\"day\\">14</td>
    <td class=\\"day\\">15</td>
  </tr>
  <tr>
    <td class=\\"day\\">16</td>
    <td class=\\"day\\">17</td>
    <td class=\\"day\\">18</td>
    <td class=\\"day\\">19</td>
    <td class=\\"day\\">20</td>
    <td class=\\"day\\">21</td>
    <td class=\\"day\\">22</td>
  </tr>
  <tr>
    <td class=\\"day active\\">23</td>
    <td class=\\"day\\">24</td>
    <td class=\\"day\\">25</td>
    <td class=\\"day\\">26</td>
    <td class=\\"day\\">27</td>
    <td class=\\"day\\">28</td>
    <td class=\\"day other-month\\">1</td>
  </tr>
  <tr>
    <td class=\\"day other-month\\">2</td>
    <td class=\\"day other-month\\">3</td>
    <td class=\\"day other-month\\">4</td>
    <td class=\\"day other-month\\">5</td>
    <td class=\\"day other-month\\">6</td>
    <td class=\\"day other-month\\">7</td>
    <td class=\\"day other-month\\">8</td>
  </tr>
</tbody>
<tfoot>
  <tr>
    <th colspan=\\"7\\">13:02:17</th>
  </tr>
</tfoot>
<!--if-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "DayOfMonth",
  "Options": Object {
    "ID": "component",
    "changeDate": [Function],
    "classForDate": [Function],
    "date": 2015-02-23T07:02:17.000Z,
    "daysOfWeek": Array [
      "Пн",
      "Вт",
      "Ср",
      "Чт",
      "Пт",
      "Сб",
      "Вс",
    ],
    "directives": Object {
      "onclick": [Function],
    },
    "isDateSelectable": [Function],
    "nextSymbol": "▸",
    "prevSymbol": "◂",
    "showTime": true,
    "today": 2020-04-25T08:03:30.000Z,
    "value": 2015-02-23T07:02:17.000Z,
  },
  "html": "
<thead>
  <tr>
    <th><span>◂</span></th>
    <th colspan=\\"5\\" class=\\"picker-switch\\">Февраль 2015 г.</th>
    <th><span>▸</span></th>
  </tr>
  <tr>
    <th>Пн</th>
    <th>Вт</th>
    <th>Ср</th>
    <th>Чт</th>
    <th>Пт</th>
    <th>Сб</th>
    <th>Вс</th>
  </tr>
</thead>
<tbody>
  <tr>
    <td class=\\"day other-month\\">26</td>
    <td class=\\"day other-month\\">27</td>
    <td class=\\"day other-month\\">28</td>
    <td class=\\"day other-month\\">29</td>
    <td class=\\"day other-month\\">30</td>
    <td class=\\"day other-month\\">31</td>
    <td class=\\"day\\">1</td>
  </tr>
  <tr>
    <td class=\\"day\\">2</td>
    <td class=\\"day\\">3</td>
    <td class=\\"day\\">4</td>
    <td class=\\"day\\">5</td>
    <td class=\\"day\\">6</td>
    <td class=\\"day\\">7</td>
    <td class=\\"day\\">8</td>
  </tr>
  <tr>
    <td class=\\"day\\">9</td>
    <td class=\\"day\\">10</td>
    <td class=\\"day\\">11</td>
    <td class=\\"day\\">12</td>
    <td class=\\"day\\">13</td>
    <td class=\\"day\\">14</td>
    <td class=\\"day\\">15</td>
  </tr>
  <tr>
    <td class=\\"day\\">16</td>
    <td class=\\"day\\">17</td>
    <td class=\\"day\\">18</td>
    <td class=\\"day\\">19</td>
    <td class=\\"day\\">20</td>
    <td class=\\"day\\">21</td>
    <td class=\\"day\\">22</td>
  </tr>
  <tr>
    <td class=\\"day active\\">23</td>
    <td class=\\"day\\">24</td>
    <td class=\\"day\\">25</td>
    <td class=\\"day\\">26</td>
    <td class=\\"day\\">27</td>
    <td class=\\"day\\">28</td>
    <td class=\\"day other-month\\">1</td>
  </tr>
  <tr>
    <td class=\\"day other-month\\">2</td>
    <td class=\\"day other-month\\">3</td>
    <td class=\\"day other-month\\">4</td>
    <td class=\\"day other-month\\">5</td>
    <td class=\\"day other-month\\">6</td>
    <td class=\\"day other-month\\">7</td>
    <td class=\\"day other-month\\">8</td>
  </tr>
</tbody>
<tfoot>
  <tr>
    <th colspan=\\"7\\">13:02:17</th>
  </tr>
</tfoot>
<!--if-->
",
}
`;
